# Automatic-RC-Car

./: .gitignore  CMakeLists.txt  README_CPP_BUILD.md  README_PS4_INTEGRATED.md  button_testing.cpp  ps4_controller_integrated.cpp  ps4_joystick_test.cpp  ps4_joystick_test.py  ps4_testing.cpp
data/raw_images/Fruit_Flower_Veg/: fruitname.txt
data_prep_scripts/: camera_test.py  data_prep_annotate.py  data_prep_batch_classify.py  data_prep_clean.py  data_prep_green_threshold.py  data_prep_setup.py  data_prep_split.py  green_object_realtime_demo.py
